# genomorph

./: .genomorph-progress.json  .gitignore  NOTICE  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
docs/: architecture.d2
results/: _tmp_matched.json  _tmp_natural.json  v0.1.0a1_separation.json
scripts/: build_eqtl_subset.py  ci_assert.py  run_results.py
src/genomorph/: __init__.py  cli.py  cluster.py  eval.py  fingerprint.py  measures.py  ot.py  tda.py  types.py  viz.py
src/genomorph/adapters/: __init__.py  alphagenome.py  base.py  borzoi.py  enformer.py  mock.py
src/genomorph/data/eqtl_subset/: README.md  macrophage_expr_vs_splice.tsv
tests/: test_adapters_cli.py  test_cli_inproc.py  test_cluster_eval.py  test_fingerprint.py  test_heavy_backends_interface.py  test_measures.py  test_ot.py  test_readme_honest.py  test_realdata.py  test_viz_tda.py
