[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genomorph"
version = "0.1.0a1"
description = "Backend-agnostic optimal-transport fingerprint of regulatory-variant effect mechanisms (shape + signed mass), CPU-only."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "hinanohart" }]
keywords = [
    "genomics", "regulatory-variant", "optimal-transport", "wasserstein",
    "variant-effect-prediction", "borzoi", "enformer", "eqtl", "mechanism",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "POT>=0.9",
]

[project.optional-dependencies]
# Heavy backends — never required for the core OT/fingerprint math or the
# synthetic benchmark. Weights are downloaded by the user at first use and are
# NEVER bundled in this package.
borzoi = ["torch>=2.0", "borzoi-pytorch>=0.4"]
enformer = ["torch>=2.0", "enformer-pytorch>=0.8"]
# AlphaGenome is opt-in only. Its weights/outputs are CC-BY-NC (non-commercial)
# and "outputs must not be used to train other ML models" per its Terms of Use.
# genomorph never bundles or redistributes AlphaGenome outputs.
alphagenome = ["alphagenome"]
viz = ["matplotlib>=3.6"]
tda = ["ripser>=0.6", "persim>=0.3"]  # v0.3 backlog (contact-map topology)
# dev is self-sufficient to run the full test suite (incl. the matplotlib viz test)
dev = ["pytest>=7", "pytest-cov>=4", "matplotlib>=3.6"]

[project.urls]
Homepage = "https://github.com/hinanohart/genomorph"
Repository = "https://github.com/hinanohart/genomorph"

[project.scripts]
genomorph = "genomorph.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/genomorph"]
# Ship the embedded eQTL Catalogue labeled subset (CC-BY-4.0) as package data;
# never ship downloaded model weights or backend outputs.
artifacts = ["src/genomorph/data/**/*.tsv"]

[tool.hatch.build.targets.sdist]
include = ["src/genomorph", "scripts", "tests", "LICENSE", "NOTICE", "README.md"]
artifacts = ["src/genomorph/data/**/*.tsv"]

[tool.coverage.run]
# Heavy backend inference paths require torch + multi-GB weights + a reference
# genome and are not runnable in CI; their static interface is unit-tested.
omit = ["*/adapters/borzoi.py", "*/adapters/enformer.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
